--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
-  },
-  "overrides": {
-    "vue": "latest"
   }
 }
